RestaurantManagement/src/objects/Order_Item__c.object
<CustomObject>
    <description>The food items ordered by the customer.</description>
    <fields>
        <fullName>Avg_Delivery_Time__c</fullName>
        <formula>(Delivered_Time__c  -  Picked_Up_Time__c)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Delivery Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Vegetarian, Non-Vegetarian or Vegan</description>
        <label>Diet Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Status__c</fullName>
        <description>Used if the order item is deleted by the customer</description>
        <label>Delete Status</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivered_Time__c</fullName>
        <label>Delivered Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Food_Item_Name__c</fullName>
        <description>Required for PushTopics</description>
        <formula>Food_Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_Item__c</fullName>
        <description>The food item ordered</description>
        <label>Food Item</label>
        <referenceTo>Food_Item__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Food_Order__c</fullName>
        <label>Food Order</label>
        <referenceTo>Food_Order__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Prep_Time__c</fullName>
        <formula>Food_Item__r.Prep_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Prep Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picked_Up_Time__c</fullName>
        <label>Picked Up Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price of Individual Line Item</description>
        <label>Price</label>
        <referenceTo>PriceBook__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The quantity of the food item ordered.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restaurant_Id__c</fullName>
        <description>Id of the Restaurant</description>
        <inlineHelpText>Id of the Restaurant</inlineHelpText>
        <label>Restaurant Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the ordered item.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picked Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Table_Number__c</fullName>
        <description>Required for PushTopics</description>
        <formula>Food_Order__r.TableNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Table Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Total Price of the ordered item</description>
        <formula>Price__r.Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Required for PushTopics</description>
        <formula>IF(ISPICKVAL(  Food_Item__r.Category__c ,&apos;Appetizer&apos;), &apos;Appetizer&apos;,
  IF(ISPICKVAL( Food_Item__r.Category__c ,&apos;Entree&apos;), &apos;Entree&apos;,
    IF(ISPICKVAL( Food_Item__r.Category__c ,&apos;Dessert&apos;), &apos;Dessert&apos;, &apos;Entree&apos;)

        )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Order Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Delete_Status__c</columns>
        <columns>Delivered_Time__c</columns>
        <columns>Food_Item__c</columns>
        <columns>Food_Item_Name__c</columns>
        <columns>Food_Order__c</columns>
        <columns>Item_Prep_Time__c</columns>
        <columns>Picked_Up_Time__c</columns>
        <columns>Price__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>Table_Number__c</columns>
        <columns>Total_Price__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>